--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,18 +3,20 @@
   <head>
     <title>Wander</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="turbo-visit-control" content="reload">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    
+
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="manifest" href="/manifest.json">
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="<%= controller_name %>-controller <%= action_name %>-action">
+  <body class="<%= controller_name %>-controller <%= action_name %>-action" data-search-id="<%= @search&.id %>">
 
     <div class="fixed inset-0 animate-gradient mesh-gradient-dark opacity-70 z-0"></div>
 
