--- a/app/views/searches/launch.html.erb
+++ b/app/views/searches/launch.html.erb
@@ -1,11 +1,5 @@
-<div class="h-screen flex flex-col items-center justify-center text-white">
+<div class="fixed inset-0 z-20 rounded-t-lg shadow-lg transition-transform duration-500 transform translate-y-full" data-controller="modal">
   <h1 class="text-4xl font-bold mb-4">Lancement de la recherche...</h1>
-  <p class="text-lg">Votre programme est en cours de génération pour <%= @search.destination %> !</p>
+  <p class="text-lg">Votre programme est en cours de génération pour  !</p>
   <div class="spinner border-t-4 border-white border-opacity-50 w-12 h-12 rounded-full animate-spin"></div>
-
-  <script>
-    setTimeout(() => {
-      window.location.href = "<%= search_path(@search) %>";
-    }, 5000);
-  </script>
 </div>
