--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="relative text-center mt-16 ">
+<div class="text-center mt-16 ">
   <h1 class="text-xl text-white font-bold">Firstname LASTNAME</h1>
   <p class="text-sm text-gray-300">Traveller type</p>
   <div class="flex justify-center items-center mt-2">
@@ -21,14 +21,12 @@
   </div>
 </div>
 
-<div class="relative text-center mt-6">
-  <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" %>
+<div class="text-center mt-6 flex gap-3 justify-center">
+  <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex items-center justify-center" %>
+  <button class="border border-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex items-center justify-center" onclick="my_modal_2.showModal()">Mes statistiques</button>
 </div>
 
-<button class="bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" onclick="my_modal_2.showModal()">open modal</button>
-
-
-<div id="countdown" class="relative mt-10 flex flex-col justify-center items-center px-4 text-white">
+<div id="countdown" class="mt-10 flex flex-col justify-center items-center px-4 text-white">
   <p class="font-playfair text-2xl font-bold text-white">Prochain voyage dans</p>
   <div  class="grid auto-cols-max grid-flow-col gap-5 text-center">
     <div class="flex flex-col">
@@ -82,7 +80,7 @@
   });
 </script>
 
-<div class="relative text-white flex">
+<div class="text-white flex">
   <div class="relative flex-1 flex flex-col gap-2 p-6">
     <div class="absolute top-26 bottom-0 ml-1.5 w-px bg-white"></div>
 
