Mise en place d'une turbo-stream de loading et d'une redirection

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <%= yield %>
     </main>
 
-    <turbo-frame id="modal-frame"></turbo-frame>
+    <%= turbo_frame_tag "modal-frame" %>
 
   </body>
 </html>
