--- a/app/views/shared/_loading.html.erb
+++ b/app/views/shared/_loading.html.erb
@@ -1,7 +1,8 @@
 <turbo-frame id="modal-frame">
-  <div class="fixed inset-0 z-20 rounded-t-lg shadow-lg transition-transform duration-500 transform translate-y-full" data-controller="modal">
-    <h1 class="text-4xl font-bold mb-4">Lancement de la recherche...</h1>
-    <p class="text-lg">Votre programme est en cours de génération pour  !</p>
+  <div class="loading-modal fixed inset-0 flex items-center justify-center bg-gray-800 h-screen w-screen z-50">
     <div class="spinner border-t-4 border-white border-opacity-50 w-12 h-12 rounded-full animate-spin"></div>
+    <p class="text-white mt-4">Chargement...</p>
+
+    <div data-controller="loading" data-loading-search-id="<%= search.id %>"></div>
   </div>
-</turbo-frame>
+<turbo-frame>
