bcp de modifications : page trips / form / connexion / home

--- a/app/views/trips/_tabs_form.html.erb
+++ b/app/views/trips/_tabs_form.html.erb
@@ -1,4 +1,4 @@
-<ul class="steps my-4" data-controller="tabs-form-new-trip" data-tabs-form-new-trip-target="tabs">
+<ul class="steps py-3 w-4/5 mx-auto" data-controller="tabs-form-new-trip" data-tabs-form-new-trip-target="tabs">
   <li class="step step-warning text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Où</li>
   <li class="step text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Quand</li>
   <li class="step text-sm font-medium text-white" data-tabs-form-new-trip-target="tabs">Avec</li>
