--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-login max-w-md mx-10 mt-10 p-6 bg-white shadow-md rounded-lg">
+<div class="container-login max-w-md mx-10 p-6 bg-white shadow-md rounded-lg">
 <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Sign up</h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
