--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Wander</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="turbo-visit-control" content="reload">
 
     <%= csrf_meta_tags %>
@@ -11,15 +10,38 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="manifest" href="/manifest.json">
     <%= javascript_importmap_tags %>
   </head>
 
   <body class="<%= controller_name %>-controller <%= action_name %>-action" data-search-id="<%= @search&.id %>">
 
+    <!-- Mesh Gradient BG -->
     <div class="fixed inset-0 animate-gradient mesh-gradient-dark opacity-70 z-0"></div>
 
+    <div data-controller="menu">
+      <!-- Menu Burger -->
+      <button class="fixed top-4 left-4 z-20 p-2 bg-black rounded-full text-white" data-action="click->menu#toggle">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+        </svg>
+      </button>
+
+      <!-- Slide-In Menu -->
+      <div class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-30 transform -translate-x-full transition-transform" data-menu-target="menu">
+        <div class="p-4">
+          <h2 class="text-lg font-bold"><%= current_user&.username || "Guest" %></h2>
+          <ul class="mt-4 space-y-2">
+            <li>
+              <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete} %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main Content -->
     <main class="relative z-10 inset-0">
       <%= yield %>
     </main>
