--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,86 +2,6 @@
   <div id="splash-screen" data-splash-screen-target="splash" class="fixed inset-0 flex items-center justify-center z-50 bg-black">
     <img src="<%= asset_path 'logo.png' %>" alt="Logo" class="h-24 animate-fade-in-slow">
   </div>
-
-  <div id="home-content" class="relative opacity-0 transition-opacity duration-1000">
-    <div class="relative bg-black">
-      <div id="map" data-controller="globe"
-        data-globe-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-        data-globe-markers-value="<%= raw @markers.to_json %>"
-        data-globe-target="map"
-        class="w-full h-64"></div>
-      <div class="absolute top-52 left-1/2 transform -translate-x-1/2">
-        <img class="w-24 h-24 border-2 rounded-full shadow-lg" src="https://avatars.githubusercontent.com/u/232731?v=4" alt="">
-      </div>
-    </div>
- <%= render "stats_modal"%>
-    <div class="relative text-center mt-16 ">
-      <h1 class="text-xl text-white font-bold">Firstname LASTNAME</h1>
-      <p class="text-sm text-gray-300">Traveller type</p>
-      <div class="flex justify-center items-center mt-2">
-        <svg class="w-4 h-4 text-gray-300 mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 2a7 7 0 100 14 7 7 0 000-14zm0 11.5a4.5 4.5 0 110-9 4.5 4.5 0 010 9z"></path>
-          <path d="M12 8a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"></path>
-        </svg>
-        <p class="text-gray-300">City, Country</p>
-      </div>
-    </div>
-
-    <div class="relative text-center mt-6">
-      <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" %>
-    </div>
-
-    <div class="relative text-white flex">
-      <div class="relative flex-1 flex flex-col gap-2 p-6">
-        <div class="absolute top-26 bottom-0 ml-1.5 w-px bg-white"></div>
-
-        <!-- Voyage 1 -->
-        <div class="flex items-center space-x-2">
-          <div class="relative z-10 flex-shrink-0">
-            <div class="w-3 h-3  border-white border-2 rounded-full"></div>
-          </div>
-          <div class="relative bg-cover bg-center rounded-lg shadow-md overflow-hidden h-40 w-full" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/5 to-transparent"></div>
-            <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
-              <p class="text-white italic text-sm mb-2">Du 23/04/2024 au 01/05/2024</p>
-              <h2 class="text-white font-bold text-lg">NEW YORK 2024</h2>
-              <p class="text-white italic text-xs">Avec Jocelyne</p>
-              <div class="mt-4">
-                <a href="#" class="text-white text-sm font-semibold flex gap-1 justify-end items-center">
-                  Voir le voyage
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <!-- Voyage 2 -->
-        <div class="flex items-center space-x-2">
-          <div class="relative z-10 flex-shrink-0">
-            <div class="w-3 h-3 bg-white rounded-full"></div>
-          </div>
-          <div class="relative bg-cover bg-center rounded-lg shadow-md overflow-hidden h-40 w-full" style="background-image: url('https://images.unsplash.com/photo-1576375801517-45814f908aa4?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
-            <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
-              <p class="text-white italic text-sm mb-2">Du 19/12/2019 au 01/01/2020</p>
-              <h2 class="text-white font-bold text-lg">MONTREAL 2019</h2>
-              <p class="text-white italic text-xs">Avec Michel et Thierry</p>
-              <div class="mt-4">
-                <a href="#" class="text-white text-sm font-semibold flex gap-1 justify-end items-center">
-                  Voir le voyage
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
+
+<turbo-frame id="main-turbo" src="<%= @path %>" turbo-visit-control="reload"></turbo-frame>
