--- a/app/views/shared/_suggestion_card.html.erb
+++ b/app/views/shared/_suggestion_card.html.erb
@@ -3,7 +3,7 @@
     <%= cl_image_tag suggestion.photos.first.key, class: "w-full h-full object-cover" %>
     <div class="absolute inset-0 bg-gradient-to-b from-black to-transparent opacity-80 h-1/3"></div>
     <div class="absolute text-white w-full p-4">
-      <h2 class="text-xs font-light mb-2">USA</h2>
+      <h2 class="text-xs font-light mb-2"><%= suggestion.country %></h2>
       <p class="text-2xl font-bold font-playfair leading-6"><%= suggestion.city %></p>
     </div>
     <%= link_to suggestion_path(suggestion), data: { turbo_frame: "modal-frame" }, class: "absolute bottom-4 right-4 w-8 h-8 p-2 bg-black rounded-full flex items-center justify-center" do %>
