--- a/app/views/trips/_form_dates.html.erb
+++ b/app/views/trips/_form_dates.html.erb
@@ -2,7 +2,7 @@
   <div class="flex items-start gap-5 mb-2">
     <div class="flex flex-col flex-1">
       <p class="text-xl font-extralight text-white mb-4 ">Choisissez vos dates :</p>
-      <div class="flex">
+      <!--<div class="flex">
         <div class="flex flex-col flex-1">
           <p class="font-light text-white">Départ</p>
           <p class="text-sm text-white" data-datepicker-target="startDate">/</p>
@@ -11,7 +11,7 @@
           <p class="font-light text-white">Retour</p>
           <p class="text-sm text-white" data-datepicker-target="endDate">/</p>
         </div>
-      </div>
+      </div>-->
     </div>
   </div>
 
