--- a/app/views/trips/_form_destination.html.erb
+++ b/app/views/trips/_form_destination.html.erb
@@ -19,9 +19,20 @@
               %>
 </div>
 
-<h2 class="text-white font-light p-4">Besoin d'inspiration ?</h2>
+<div class="carousel carousel-center w-screen pr-20 gap-1" data-controller="carousel-suggestions">
+  <div data-carousel-suggestions-target="item"
+        class="scale-95">
+    <div class="carousel-item w-44">
+      <div class="relative overflow-hidden rounded-box w-full h-60 flex flex-col items-center justify-center bg-gradient-to-br from-orange-400 to-orange-700">
+        <!-- <%= image_tag "rome", class: "w-full h-full object-cover opacity-50" %> -->
+        <div class="absolute text-white w-full p-4">
+          <p class="text-2xl font-bold font-playfair leading-6 mb-2">En panne d'idée ?</p>
+          <p class="text-md leading-2">Découvrez les destinations les plus demandées par nos travellers</p>
+        </div>
+      </div>
+    </div>
 
-<div class="carousel carousel-center w-screen px-14 gap-1" data-controller="carousel-suggestions">
+  </div>
   <% @suggestions.each do |suggestion| %>
     <div data-carousel-suggestions-target="item"
          class="scale-95 transition-all duration-500 opacity-75 cursor-pointer"
