--- a/app/views/trips/_form_options.html.erb
+++ b/app/views/trips/_form_options.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <!-- Options -->
-  <div class="grid grid-cols-2 gap-4">
+  <div class="grid grid-cols-2 gap-4 px-4">
     <% ["Culturel", "Nature", "Aventure", "Loisirs", "Détente", "Gastronomie", "Shopping", "Vie Nocturne", "Sportif"].each do |activity| %>
       <div>
         <label class="flex items-center gap-2 text-white">
@@ -17,9 +17,12 @@
     <% end %>
   </div>
 
-  <h2 class="text-white font-light p-4">Besoin d'inspiration ?</h2>
-
-  <div class="mb-4">
-    <%= f.text_area :inspiration, class: "w-full p-2 border rounded-md focus:ring-orange-500 focus:border-orange-500 text-sm text-gray-600", placeholder: "Propose-moi un lieu pour voir le coucher de soleil le vendredi soir" %>
+  <div class="flex items-start gap-5 mt-4">
+    <div class="flex flex-col flex-1">
+      <p class="text-xl font-extralight text-white mb-4 ">Des idées en plus ?</p>
+    </div>
   </div>
+
+  <%= f.text_area :inspiration, class: "w-full px-2 textarea textarea-md", placeholder: "Propose-moi un lieu pour voir le coucher de soleil le vendredi soir" %>
+
 </div>
