--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,6 +1,6 @@
 <div id="screen-container" class="relative h-screen overflow-hidden flex flex-col" data-controller="add-trip-animation">
   <div data-controller="stepper">
-    <button class="relative p-4 shadow " data-action="click->stepper#goBack" data-url="<%= trips_path %>" >
+    <button class="absolute p-4 shadow z-10" data-action="click->stepper#goBack" data-url="<%= trips_path %>" >
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
       </svg>
@@ -10,8 +10,9 @@
       <div class="w-16 h-16 halo animate-gradient mesh-gradient-orange rounded-full"></div>
     </div>
 
-    <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-24 flex items-start w-full">
-      <p id="typewriter-text" data-add-trip-animation-target="text" class="px-3 text-white text-2xl font-semibold"></p>
+    <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-16 flex items-start w-full">
+      <p id="robot-icon" data-add-trip-animation-target="robotIcon" class="text-xl px-2 transition-opacity duration-1000">🤖</p>
+      <p id="typewriter-text" data-add-trip-animation-target="text" class="px-3 text-white text-xl font-semibold"></p>
     </div>
 
     <%= simple_form_for @search, url: searches_path, data: { turbo_frame: "loading-frame" } do |f| %>
