--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="splash-screen">
-  <div id="splash-screen" data-splash-screen-target="splash" class="fixed inset-0 flex items-center justify-center z-50 bg-black">
+  <div id="splash-screen" data-splash-screen-target="splash" class="fixed inset-0 flex items-center justify-center z-50 h-screen w-screen radial-gradient-dark-orange">
     <img src="<%= asset_path 'logo.png' %>" alt="Logo" class="h-24 animate-fade-in-slow">
   </div>
 </div>
