--- a/app/views/trips/_form_destination.html.erb
+++ b/app/views/trips/_form_destination.html.erb
@@ -19,7 +19,7 @@
               %>
 </div>
 
-<div class="carousel carousel-center w-screen pr-20 gap-1" data-controller="carousel-suggestions">
+<div class="carousel carousel-center w-screen pl-4 pr-20 gap-1" data-controller="carousel-suggestions">
   <div data-carousel-suggestions-target="item"
         class="scale-95">
     <div class="carousel-item w-44">
