--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -10,8 +10,8 @@
       <div class="w-16 h-16 halo animate-gradient mesh-gradient-orange rounded-full"></div>
     </div>
 
-    <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-16 flex items-start w-full">
-      <p id="robot-icon" data-add-trip-animation-target="robotIcon" class="text-xl px-2 transition-opacity duration-1000">🤖</p>
+    <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-16 flex items-start w-full pr-10">
+      <p id="robot-icon" data-add-trip-animation-target="robotIcon" class="text-lg px-2 transition-opacity duration-1000">🤖</p>
       <p id="typewriter-text" data-add-trip-animation-target="text" class="px-3 text-white text-xl font-semibold"></p>
     </div>
 
