--- a/app/views/trips/_timeline_card.html.erb
+++ b/app/views/trips/_timeline_card.html.erb
@@ -1,9 +1,9 @@
 <div class="flex items-start space-x-2 mt-4 last:mb-5">
   <div class="flex items-center space-x-2">
-    <div class="relative z-10 flex-shrink-0">
+    <div class="relative flex-shrink-0">
       <p class="w-10"><%= trip.end_date.strftime('%Y') if !trip.end_date.nil? %></p>
     </div>
-    <div class="relative z-10 flex-shrink-0">
+    <div class="relative flex-shrink-0">
       <div class="w-3 h-3 bg-white rounded-full"></div>
     </div>
   </div>
