--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -26,16 +26,17 @@
         </div>
 
         <div class="text-center my-5 flex gap-3 justify-center">
-          <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex items-center justify-center", data: { turbo_frame: "_top" } %>
-          <button class="border border-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex items-center justify-center" onclick="my_modal_2.showModal()">Mes statistiques</button>
+          <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-md active:bg-orange-700 h-12 flex items-center justify-center", data: { turbo_frame: "_top" } %>
+          <button class="border border-orange-600 text-white py-2 px-6 rounded-md text-md active:bg-orange-700 h-12 flex items-center justify-center" onclick="my_modal_2.showModal()">Mes statistiques</button>
         </div>
 
-        <div class="bg-cover bg-center rounded-lg shadow-md overflow-hidden w-full sticky top-0 z-20" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+        <% if !@trips.empty? %>
+        <div class="bg-cover bg-center rounded-lg shadow-md overflow-hidden w-full sticky top-0 z-10" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
           <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-black/20"></div>
           <div class="relative flex flex-col w-full h-full justify-center items-center p-4 box-border">
-            <p class="text-white italic text-xs mb-2">Du <%= @trips[0].start_date  if !@trips[0].start_date.nil? %> au <%= @trips[0].end_date if !@trips[0].end_date.nil? %></p>
+            <p class="text-white italic text-xs mb-2">Du <%= @trips[0].start_date if !@trips[0].start_date.nil? %> au <%= @trips[0].end_date if !@trips[0].end_date.nil? %></p>
             <h2 class="text-white font-bold text-4xl font-playfair"><%= @trips[0].name %></h2>
-            <%= render "countdown"%>
+            <%= render "countdown", start: @trips[0].start_date.nil? ? "" : @trips[0].start_date %>
             <div class="mt-4 w-full">
               <%= link_to trip_path(@trips[0]), class:"text-white text-sm font-semibold flex gap-1 justify-end items-center", data: { turbo_frame: "_top" } do %>
                 Voir le voyage
@@ -46,6 +47,7 @@
             </div>
           </div>
         </div>
+        <% end %>
 
         <div class="pt-5">
           <%= render "timeline"%>
