--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -4,7 +4,7 @@
   <!-- Vue actuelle avec la carte et le carrousel -->
   <div class=" map absolute top-0 left-0 right-0 bottom-0 z-0 block h-full" data-toggle-target="mapView">
   <!-- Bouton retour -->
-    <button class="absolute top-4 left-4 btn  bg-white text-gray-900 w-12 h-12 flex items-center justify-center z-10" onclick="history.back()">
+    <button class="absolute top-4 left-4 btn bg-white text-gray-900 w-12 h-12 flex items-center justify-center z-10" onclick="history.back()">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
       </svg>
@@ -18,69 +18,69 @@
   </div>
 
 <div class="absolute bottom-16 left-0 right-0 z-10 overflow-x-auto" data-controller="carrousel">
-    <div class="carousel carousel-center rounded-box space-x-4 p-4" data-carrousel-target="container" >
-    <!--pour comportement caroussel ajouter max-w-full mais controller KO-->
-      <% @activities.each_with_index do |activity, index| %>
+  <div class="carousel carousel-center rounded-box space-x-4 p-4" data-carrousel-target="container" >
+  <!--pour comportement caroussel ajouter max-w-full mais controller KO-->
+    <% @activities.each_with_index do |activity, index| %>
 
-        <%= render "carrousel_item", activity: activity, index: index %>
-      <% end %>
-    </div>
-</div>
-</div>
-  <!-- Vue agenda -->
-
-  <div data-toggle-target="agendaView" class="hidden h-full flex ">
-<div class="w-full bg-black text-white" data-controller="tabs">
-  <!-- Calendrier -->
-  <div class="flex-col items-center justify-between px-4 py-3 bg-gray-900">
-    <!-- Bouton retour -->
-    <div class="flex justify-between items-center">
-      <button class="btn btn-outline border-gray-500 text-gray-400 mr-4 w-12 h-12 flex items-center justify-center" onclick="history.back()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-        </svg>
-      </button>
-      <h1 class="w-100 text-center font-bold text-lg"><%= @trip.name %></h1>
-      <div class="ml-4 w-12 h-12"></div>
-    </div>
-
-    <!-- Jours dynamiques -->
-    <div class="flex items-center overflow-x-scroll no-scrollbar space-x-2 mt-4" data-tabs-target="days">
-      <% @calendar_dates.each_with_index do |date, index| %>
-        <div class="flex flex-col items-center cursor-pointer text-gray-400 px-4 py-3 <%= 'text-black bg-white rounded-lg px-4 py-3' if index == 0 %>"
-            data-action="click->tabs#changeTab"
-            data-tabs-day="<%= index %>"
-            data-tabs-target="day">
-          <span class="text-sm"><%= I18n.l(date, format: '%a')[0].upcase %></span>
-          <span class="text-xs font-bold"><%= date.strftime('%d') %></span>
-        </div>
-      <% end %>
-    </div>
-  </div>
-
-  <!-- Tabs pour les jours -->
-  <div role="tablist" class="tabs tabs-bordered bg-black text-white py-4 overflow-x-scroll">
-    <% @calendar_dates.each_with_index do |date, index| %>
-      <a class="tab <%= index == 0 ? 'tab-active text-white border-white w-36' : 'text-gray-400 w-36' %>"
-        data-action="click->tabs#changeTab"
-        data-tabs-day="<%= index %>"
-        data-tabs-target="tab"> Jour <%= index + 1 %></a>
+      <%= render "carrousel_item", activity: activity, index: index %>
     <% end %>
   </div>
-
-  <!-- Timeline Section -->
-  <% @day_activities.each_with_index do |(date, activities), index| %>
-  <div class="p-4 hidden overflow-hidden" data-tabs-target="content" data-tabs-day="<%= index %>">
-    <ul class="relative">
-      <% if activities.any? %>
-        <% activities.each do |trip_activity| %>
-          <%= render partial: 'activity_card', locals: { trip_activity: trip_activity } %>
-        <% end %>
-      <% else %>
-        <li class="text-gray-400 text-sm">Aucune activité prévue pour ce jour.</li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
 </div>
+</div>
+
+  <!-- Vue agenda -->
+<div data-toggle-target="agendaView" class="hidden h-full flex">
+  <div class="w-full text-white" data-controller="tabs">
+    <!-- Calendrier -->
+    <div class="flex-col items-center justify-between px-4 py-3 bg-gray-900">
+      <!-- Bouton retour -->
+      <div class="flex justify-between items-center">
+        <button class="btn btn-outline border-gray-500 text-gray-400 mr-4 w-12 h-12 flex items-center justify-center" onclick="history.back()">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+          </svg>
+        </button>
+        <h1 class="w-100 text-center font-bold text-lg"><%= @trip.name %></h1>
+        <div class="ml-4 w-12 h-12"></div>
+      </div>
+
+      <!-- Jours dynamiques -->
+      <div class="flex items-center overflow-x-scroll no-scrollbar space-x-2 mt-4" data-tabs-target="days">
+        <% @calendar_dates.each_with_index do |date, index| %>
+          <div class="flex flex-col items-center cursor-pointer text-gray-400 px-4 py-3 <%= 'text-black bg-white rounded-lg px-4 py-3' if index == 0 %>"
+              data-action="click->tabs#changeTab"
+              data-tabs-day="<%= index %>"
+              data-tabs-target="day">
+            <span class="text-sm"><%= I18n.l(date, format: '%a')[0].upcase %></span>
+            <span class="text-xs font-bold"><%= date.strftime('%d') %></span>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <!-- Tabs pour les jours -->
+    <div role="tablist" class="bg-black tabs tabs-bordered text-white pt-2 mb-4 overflow-x-scroll">
+      <% @calendar_dates.each_with_index do |date, index| %>
+        <a class="tab <%= index == 0 ? 'tab-active text-white border-white w-36 pb-4' : 'text-gray-400 w-36 pb-4' %>"
+          data-action="click->tabs#changeTab"
+          data-tabs-day="<%= index %>"
+          data-tabs-target="tab"> Jour <%= index + 1 %></a>
+      <% end %>
+    </div>
+
+    <!-- Timeline Section -->
+    <% @day_activities.each_with_index do |(date, activities), index| %>
+    <div class="p-4 hidden overflow-hidden" data-tabs-target="content" data-tabs-day="<%= index %>">
+      <ul class="relative">
+        <% if activities.any? %>
+          <% activities.each do |trip_activity| %>
+            <%= render partial: 'activity_card', locals: { trip_activity: trip_activity } %>
+          <% end %>
+        <% else %>
+          <li class="text-gray-400 text-sm">Aucune activité prévue pour ce jour.</li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  </div>
 </div>
