--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -150,10 +150,7 @@
 
       <div data-controller="read-more" data-read-more-more-text-value="Voir plus" data-read-more-less-text-value="Voir moins">
         <p class="my-content mt-2 text-sm text-gray-600" data-read-more-target="content">
-          <%# <%= @activity.description %>
-          Embark on a memorable adventure with Tamis Cruise, an experience that combines relaxation, breathtaking views, and a touch of cultural immersion. This activity offers a serene journey across picturesque waterways, ideal for couples, families, or anyone looking to escape the hustle and bustle of daily life.
-
-          As you board the Tamis Cruise, you'll be greeted by a warm and friendly crew dedicated to making your journey unforgettable. The cruise is designed to provide panoramic views of the surrounding landscapes, from shimmering waters to lush greenery and iconic landmarks along the way.
+          <%= @activity.description%>
         </p>
         <button class="text-gray-500 text-sm font-bold" data-action="read-more#toggle">Voir plus</button>
       </div>
