--- a/app/views/trips/_activity_card.html.erb
+++ b/app/views/trips/_activity_card.html.erb
@@ -1,6 +1,9 @@
-<%= link_to activity_path(trip_activity.activity) do %>
-  <li class="flex items-center space-x-4 relative">
+
+  <li class="flex items-center space-x-4 relative"
+      data-sortable-update-url="<%= trip_activity_path(trip_activity) %>"
+      data-id="<%= trip_activity.id %>">
     <!-- Timeline time -->
+
     <div class="text-gray-400 text-sm w-16 text-right">
       <div><%= trip_activity.start_date.strftime('%H:%M') %></div>
       <div><%= trip_activity.end_date.strftime('%H:%M') %></div>
@@ -9,15 +12,17 @@
     <!-- Timeline node and line -->
     <div class="relative flex flex-col items-center">
       <div class="w-4 h-4 bg-white rounded-full"></div>
-      <% unless index == 0 %>
-        <div class="absolute h-32 w-0.5 bg-white -top-32 left-1/2 transform -translate-x-1/2"></div>
-      <% end %>
+        <div class="absolute h-24 w-0.5 bg-white -top-24 left-1/2 transform -translate-x-1/2"></div>
     </div>
 
     <!-- Timeline card -->
-    <div class="bg-gray-800 text-white rounded-lg shadow-md p-4 w-full">
-      <h3 class="font-bold"><%= trip_activity.activity.name %></h3>
-      <p class="text-sm"><%= trip_activity.activity.description.truncate(50) %></p>
+    <div class="bg-gray-800 text-white rounded-lg shadow-md p-4 w-full flex justify-between items-center">
+     <%= link_to activity_path(trip_activity.activity) do%>
+      <div class="flex-col">
+        <h3 class="font-bold"><%= trip_activity.activity.name %></h3>
+        <p class="text-sm"><%= trip_activity.activity.description.truncate(50) %></p>
+      </div>
+      <% end%>
+       <%= image_tag 'handle.png', class: "handle size-10" %>
     </div>
   </li>
-<% end %>
