--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,5 @@
-<div class="controller" data-controller="toggle">
+<div class="pt-safe" data-controller="toggle">
+
   <!-- Bouton Toggle -->
   <button class="fixed bottom-4 right-4 z-50 bg-orange-500 text-white p-3 rounded-full shadow-lg icon"
           data-action="click->toggle#toggleView"
