--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
     <div data-controller="menu">
       <!-- Menu Burger -->
-      <button class="fixed top-3 right-4 p-1 rounded-full text-white z-20 mt-safe" data-action="click->menu#toggle">
+      <button class="fixed right-4 p-1 rounded-full text-white z-20 pt-safe-or-4" data-action="click->menu#toggle">
         <p class="icon icon-100 drop-shadow-xl text-4xl">menu</p>
       </button>
 
