--- a/app/views/searches/_loading.html.erb
+++ b/app/views/searches/_loading.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id="modal-frame">
+<%= turbo_frame_tag "modal-frame" do %>
   <div  class="fixed inset-0 flex flex-col items-center justify-center z-50 h-screen w-screen radial-gradient-dark-orange">
     <span class="loading loading-ring loading-lg text-white"></span>
     <p class="px-4 text-center text-white mt-4">Création de votre programme en cours</p>
@@ -6,4 +6,4 @@
     <p class="text-white text-4xl font-bold font-playfair"><%= search.destination %></p>
     <div data-controller="loading" data-loading-search-id="<%= search.id %>"></div>
   </div>
-<turbo-frame>
+<% end %>
