--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -31,23 +31,45 @@
         </div>
 
         <% if !@trips.empty? %>
-        <div class="bg-cover bg-center rounded-lg shadow-md overflow-hidden w-full sticky top-0 z-10" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-          <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-black/20"></div>
-          <div class="relative flex flex-col w-full h-full justify-center items-center p-4 box-border">
-            <p class="text-white italic text-xs mb-2">Du <%= @trips[0].start_date if !@trips[0].start_date.nil? %> au <%= @trips[0].end_date if !@trips[0].end_date.nil? %></p>
-            <h2 class="text-white font-bold text-4xl font-playfair"><%= @trips[0].name %></h2>
-            <%= render "countdown", start: @trips[0].start_date.nil? ? "" : @trips[0].start_date %>
-            <div class="mt-4 w-full">
-              <%= link_to trip_path(@trips[0]), class:"text-white text-sm font-semibold flex gap-1 justify-end items-center", data: { turbo_frame: "_top" } do %>
-                Voir le voyage
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                </svg>
-              <% end %>
+          <div class="next-trip-container sticky z-10 w-full transition-all duration-200 bg-cover bg-center rounded-lg shadow-md overflow-hidden" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-black/20"></div>
+            <div class="relative flex flex-col w-full h-full justify-center items-center p-4 box-border">
+              <p class="text-white italic text-xs mb-2">Du <%= @trips[0].start_date if !@trips[0].start_date.nil? %> au <%= @trips[0].end_date if !@trips[0].end_date.nil? %></p>
+              <h2 class="text-white font-bold text-4xl font-playfair"><%= @trips[0].name %></h2>
+              <%= render "countdown", start: @trips[0].start_date.nil? ? "" : @trips[0].start_date %>
+              <div class="mt-4 w-full">
+                <%= link_to trip_path(@trips[0]), class:"text-white text-sm font-semibold flex gap-1 justify-end items-center", data: { turbo_frame: "_top" } do %>
+                  Voir le voyage
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                  </svg>
+                <% end %>
+              </div>
             </div>
           </div>
-        </div>
         <% end %>
+
+        <script>
+          const stickyElm = document.querySelector('.next-trip-container')
+          const observer = new IntersectionObserver(
+            (entries) => {
+              entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                  console.log("L'élément est visible dans le viewport");
+                  stickyElm.classList.remove("sticked");
+                } else {
+                  console.log("L'élément est hors du viewport");
+                  stickyElm.classList.add("sticked");
+                }
+              });
+            },
+            { threshold: [1] }
+          );
+
+          observer.observe(stickyElm);
+        </script>
+
+
 
         <div class="pt-3">
           <%= render "timeline"%>
