--- a/app/assets/stylesheets/components/_animations.scss
+++ b/app/assets/stylesheets/components/_animations.scss
@@ -36,3 +36,42 @@
     opacity: 1;
   }
 }
+
+.circles {
+  height: 200vmin;
+  position: relative;
+  width: 200vmin;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  filter: blur(0.3rem);
+  opacity: 0.5;
+
+  > div {
+    animation: growAndFade 4s infinite ease-out;
+    background-color: dodgerblue;
+    border-radius: 50%;
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+  }
+
+  .circle2 {
+    animation-delay: .5s;
+  }
+  .circle3 {
+    animation-delay: 1.5s;
+  }
+}
+
+@keyframes growAndFade {
+  0% {
+    opacity: .25;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1);
+  }
+}
