--- a/app/views/trips/_form_dates.html.erb
+++ b/app/views/trips/_form_dates.html.erb
@@ -1,5 +1,5 @@
 <div id="calendar-part" data-controller="datepicker" class="px-4 pb-3">
-  <div class="flex items-start gap-5 mb-2">
+  <div class="flex items-start gap-5 mb-2 mt-3">
     <div class="flex flex-col flex-1">
       <p class="text-xl font-extralight text-white mb-4 ">Choisissez vos dates :</p>
       <!--<div class="flex">
