--- a/app/views/trips/_form_destination.html.erb
+++ b/app/views/trips/_form_destination.html.erb
@@ -1,5 +1,5 @@
 <div class="px-4">
-  <div class="flex flex-col flex-1">
+  <div class="flex flex-col flex-1  mt-3">
     <p class="text-lg font-extralight text-white">Choisissez une destination :</p>
   </div>
 
@@ -11,11 +11,11 @@
               autocomplete: "current-password" } %>
 </div>
 
-<div class="flex flex-col flex-1 px-4">
+<div class="flex flex-col flex-1 px-4 mt-3">
   <p class="text-lg font-extralight text-white">Nos suggestions :</p>
 </div>
 
-<div class="carousel carousel-center w-screen pl-4 pr-20 gap-1" data-controller="carousel-suggestions">
+<div class="carousel carousel-center w-screen pl-4 pr-20 gap-1 mt-2" data-controller="carousel-suggestions">
   <div data-carousel-suggestions-target="item"
         class="scale-95">
     <div class="carousel-item w-44">
