--- a/app/assets/stylesheets/components/_animations.scss
+++ b/app/assets/stylesheets/components/_animations.scss
@@ -49,7 +49,7 @@
 
   > div {
     animation: growAndFade 4s infinite ease-out;
-    background-color: dodgerblue;
+    background-color: #19396a;
     border-radius: 50%;
     height: 100%;
     opacity: 0;
