--- a/app/views/suggestions/_show.html.erb
+++ b/app/views/suggestions/_show.html.erb
@@ -1,8 +1,8 @@
 <turbo-frame action="replace" id="modal-frame">
   <div data-controller="stories">
     <div class="fixed inset-0 z-20 rounded-t-lg shadow-lg transition-transform duration-500 transform translate-y-full" data-controller="modal">
-      <button class="absolute p-4 z-50" data-action="click->modal#close">
-        <p class="icon icon-100 drop-shadow-xl text-4xl text-white">arrow_back</p>
+      <button class="absolute p-4 right-0 z-50" data-action="click->modal#close">
+        <p class="icon icon-200 drop-shadow-xl text-4xl text-black">close</p>
       </button>
 
       <div data-stories-target="track" class="carousel-track flex transition-transform duration-1000 ease-in-out w-full h-full">
