fix bug on activity

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -101,7 +101,7 @@
     <div class="px-6 mt-4 flex items-center space-x-2">
       <!-- Etoiles -->
       <div class="flex text-yellow-400">
-        <% @activity.reviews.to_i.times do %>
+        <% @activity.global_rating.to_i.times do %>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-5 w-5"
